crates/cli/tests/snapshots/cli__list__all_adds_a_done_group_after_the_open_ones.snap
---
source: crates/cli/tests/cli.rs
assertion_line: 242
expression: stdout(&out)
---
IN PROGRESS
  [ 1] #A Rewrite the tasks script in Rust (due in 4d)  #gitlab 

READY
  [ 3] #B Answer the support ticket  #support 

WAITING
  [ 6] #B Wait for the security review

NO STATUS
  [ 7] #B Task without a tags section

DONE
  [ 4] #C Ship the release notes  #gitlab
