crates/cli/tests/snapshots/cli__list__by_priority.snap
---
source: crates/cli/tests/cli.rs
assertion_line: 192
expression: stdout(&out)
---
IN PROGRESS
  [ 1] #A Rewrite the tasks script in Rust (due in 4d)  #gitlab
