crates/cli/tests/snapshots/cli__list__by_tag.snap
---
source: crates/cli/tests/cli.rs
expression: stdout(&out)
---
IN PROGRESS
  [ 1] #A Rewrite the tasks script in Rust (due 2026-10-10)  #gitlab
