crates/cli/tests/snapshots/cli__list__combined_flags_and_text.snap
---
source: crates/cli/tests/cli.rs
expression: stdout(&out)
---
in-progress
  [ 1] #A Rewrite the tasks script in Rust (due 2026-10-10)  #gitlab
