crates/cli/tests/snapshots/cli__list__custom_workflow_status_and_color.snap
---
source: crates/cli/tests/cli.rs
expression: stdout(&out)
---
[1;34mIN PROGRESS[0m
  [2m[ 1][0m [1;31m#A[0m Rewrite the tasks script in Rust [2m(due 2026-10-10)[0m [48;5;24m[38;5;231m #gitlab [0m

[1;38;5;208mREVIEW[0m
  [2m[ 8][0m [2m#B[0m Needs a review

[1;32mREADY[0m
  [2m[ 3][0m [2m#B[0m Answer the support ticket [48;5;24m[38;5;231m #support [0m

[1;2mNO STATUS[0m
  [2m[ 6][0m [2m#B[0m Wait for the security review [48;5;24m[38;5;231m #waiting [0m
  [2m[ 7][0m [2m#B[0m Task without a tags section
