crates/cli/tests/snapshots/cli__list__one_status.snap
---
source: crates/cli/tests/cli.rs
expression: stdout(&out)
---
ready
  [ 3] #B Answer the support ticket  #support
